--- a/style.css
+++ b/style.css
@@ -5,15 +5,20 @@
 }
 
 body {
-    height: 100vh;
     display: flex;
+    padding: 5rem;
     justify-content: center;
     align-items: center;
     background-color: #021526;
     font-family: "Roboto", serif;
 }
 
+hr {
+    border: 1px solid #021526;
+}
+
 .main-container {
+    max-width: 500px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -22,7 +27,7 @@ body {
     color: #000000;
     line-height: 50px;
     font-size: 1.5rem;
-    background-color: #6EACDA;
+    background-color: #EBEAFF;
     border-radius: 15px;
 }
 
@@ -34,14 +39,27 @@ body {
     border-radius: 10px;
 }
 
+.game-title {
+    line-height: 60px;
+}
+
 .instructions-container {
-    line-height: 30px;
+    padding: 15px;
+    border-radius: 5px;
+    line-height: 25px;
+    background-color: #9694FF;
+    text-align: center;
+}
+
+.instructions-tittle {
+    font-weight: 800;
+    margin-bottom: 10px;
 }
 
 .options-container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 600px;
     padding: 20px;
     flex-grow:0;
@@ -54,20 +72,22 @@ body {
     padding: 10px 15px;
     border-radius: 10px;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .round-information {
     width: 200px;
-    height: 200px;
+    height: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .score-info {
     width: 200px;
-    height: 200px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -75,12 +95,17 @@ body {
 }
 
 .results-container {
-    height: 200px;
-    width: 300px;
-    padding: 20px;
+    height: 100px;
+    width: 350px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 0 0 10px 10px;
+    border-radius: 10px;
+    background: #3D3BF3;
+    color: white;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 20px;
 }
